# mimalloc-rs

./: .editorconfig  .gitmodules  Cargo.toml  README.md
mimalloc-sys/: Cargo.toml  build.rs
mimalloc-sys/src/: lib.rs
src/: lib.rs
