[workspace]
members = ["mimalloc-sys"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[package]
name = "mimalloc"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
mimalloc-sys = { path = "mimalloc-sys", version = "0.1.0" }

[dev-dependencies]
mockalloc = "0.1"

[features]
default = []
